<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <cn.aijiamuyingfang.weapp.manager.widgets.WeToolBar
            android:id="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetEnd="56dp"
            app:title="订单详情" />

        <LinearLayout
            android:id="@+id/operator_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:text="@string/Activity_ThirdSend_Detail_Operator"
                android:textSize="20sp" />

            <cn.aijiamuyingfang.weapp.manager.widgets.ClearEditText
                android:id="@+id/operator"
                style="@style/editText_base"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:hint="@string/Activity_ThirdSend_Detail_Operator_Tip"
                android:textSize="20sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:text="@string/Activity_ThirdSend_Detail_Send_Price"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/send_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:text="@string/Activity_ThirdSend_Detail_Send_Type"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/send_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:text="@string/Activity_ThirdSend_Detail_Recieve_Address"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/address_detailAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:text="@string/Activity_ThirdSend_Detail_Order_No"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/shoporder_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:text="@string/Activity_ThirdSend_Detail_Order_CreateTime"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/shoporder_create_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:text="@string/Activity_ThirdSend_Detail_Send_Company"
                    android:textSize="20sp" />

                <cn.aijiamuyingfang.weapp.manager.widgets.ClearEditText
                    android:id="@+id/third_send_company"
                    style="@style/editText_base"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:hint="@string/Activity_ThirdSend_Detail_Send_Company_Tip"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:text="@string/Activity_ThirdSend_Detail_Send_No"
                    android:textSize="20sp" />

                <cn.aijiamuyingfang.weapp.manager.widgets.ClearEditText
                    android:id="@+id/third_send_no"
                    style="@style/editText_base"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:hint="@string/Activity_ThirdSend_Detail_Send_No_Tip"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btn_save"
            style="@style/bigConfirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/Activity_ThirdSend_Detail_Button_Save" />

    </LinearLayout>

</ScrollView>