<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <cn.aijiamuyingfang.weapp.manager.widgets.WeToolBar
            android:id="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetEnd="56dp"
            app:title="订单详情" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/good_cover_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:contentDescription="@string/Default_Content_Description"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/good_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:maxLines="3"
                    android:text=""
                    android:textColor="@color/base_color"
                    android:textSize="@dimen/base_text_size" />

                <TextView
                    android:id="@+id/good_price"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Activity_PreOrder_Detail_Price"
                    android:textColor="@color/firebrick"
                    android:textSize="@dimen/big_text_size" />

                <TextView
                    android:id="@+id/good_unit"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/firebrick"
                    android:textSize="@dimen/big_text_size" />

                <TextView
                    android:id="@+id/good_level"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/firebrick"
                    android:textSize="@dimen/big_text_size" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Activity_PreOrder_Detail_Good_Count" />

            <cn.aijiamuyingfang.weapp.manager.widgets.ClearEditText
                android:id="@+id/good_count"
                style="@style/editText_base"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:hint="@string/Activity_PreOrder_Detail_Good_Count_Tip"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            style="@style/bigConfirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/Activity_PreOrder_Detail_Good_Save_Button" />
    </LinearLayout>
</ScrollView>
